页面和记事本项目

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,23 @@
 {
-  "files.autoSave": "afterDelay",
-  "files.autoGuessEncoding": true,
-  "workbench.list.smoothScrolling": true,
-  "editor.cursorSmoothCaretAnimation": "on",
-  "editor.smoothScrolling": true,
-  "editor.cursorBlinking": "smooth",
-  "editor.mouseWheelZoom": true,
-  "editor.formatOnPaste": true,
-  "editor.formatOnType": true,
-  "editor.formatOnSave": true,
-  "editor.wordWrap": "on",
-  "editor.guides.bracketPairs": true,
+  "files.autoSave": "afterDelay", // 自动保存
+  "files.autoGuessEncoding": true, // 自动识别编码
+  "workbench.list.smoothScrolling": true, // 平滑滚动
+  "editor.cursorSmoothCaretAnimation": "on", // 光标动画
+  "editor.smoothScrolling": true, // 编辑器平滑滚动
+  "editor.cursorBlinking": "smooth", // 光标闪烁动画
+  "editor.mouseWheelZoom": true, // 鼠标滚轮缩放字体
+  "editor.formatOnPaste": true, // 粘贴时自动格式化
+  "editor.formatOnType": true, // 输入时自动格式化
+  "editor.formatOnSave": true, // 保存时自动格式化
+  "editor.wordWrap": "on", // 自动换行
+  "editor.guides.bracketPairs": true, // 括号对齐线
   // "editor.bracketPairColorization.enabled": true, // 此设置vscode在较新版本已默认开启
-  "editor.suggest.snippetsPreventQuickSuggestions": false,
-  "editor.acceptSuggestionOnEnter": "smart",
-  "editor.suggestSelection": "recentlyUsed",
-  "window.dialogStyle": "custom",
-  "debug.showBreakpointsInOverviewRuler": true
+  "editor.suggest.snippetsPreventQuickSuggestions": false, // 代码片段与建议共存
+  "editor.acceptSuggestionOnEnter": "smart", // 智能回车补全
+  "editor.suggestSelection": "recentlyUsed", // 最近使用优先
+  "window.dialogStyle": "custom", // 自定义弹窗样式
+  "debug.showBreakpointsInOverviewRuler": true, // 断点显示
+  "code-runner.runInTerminal": true,
+  "code-runner.saveAllFilesBeforeRun": true,
+  "code-runner.saveFileBeforeRun": true
 }
